--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6cb2affd50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f20a2cdb2d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6cb2dcb350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6cb2de8490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f20a29ab150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f20a29ab350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6cb3390c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6cb3399d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f20a2f6ca90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f20a2f6cc90&gt;]</pre>
 </div>
 
 </div>
