--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4c1db4be10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c6dca1b10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4c1daf1410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4c1daf1610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c6e268190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9c6e268390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4c1e0a0c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4c1e0a0e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c6e806a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9c6e806c90&gt;]</pre>
 </div>
 
 </div>
