--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa452f70e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f74ddf6cb10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa452f401d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa452f403d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f74de5bc1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f74de2592d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4534ddb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa4534ddd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f74de855310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f74de80ac90&gt;]</pre>
 </div>
 
 </div>
