--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff68146d790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4865951790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff681420110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff681420310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4865edefd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4865eee210&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6819e2a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff6819e2c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f48664ae8d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f48664aead0&gt;]</pre>
 </div>
 
 </div>
