--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdd35fef950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdd57335e50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd35fb0090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdd35fb0290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd57318150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdd57318350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd36546950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdd36546b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd578ea410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdd578b5cd0&gt;]</pre>
 </div>
 
 </div>
