--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff5cd85f210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fedeedb1f50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff5cd54a110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff5cd54a310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fedef07b150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fedef07b350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff5cdae6a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff5cdae6c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fedef63dad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fedef63dcd0&gt;]</pre>
 </div>
 
 </div>
