--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2656085210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7ca4ebe510&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2656053210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2656053410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ca519e210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7ca519e410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f26565eab50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f26565ead50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ca574ead0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7ca574ecd0&gt;]</pre>
 </div>
 
 </div>
