--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f434e29e590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7929c66050&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f434dc6c290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f434dc6c4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7929c212d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7929c214d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f434e209bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f434e209e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f792a1bcbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f792a1bcdd0&gt;]</pre>
 </div>
 
 </div>
