--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f003bf758d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8066452b90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f003bf3a290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f003bf3a4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8066417250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8066417450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f003c4d9b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f003c4d9dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f80669c8ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f80669c8cd0&gt;]</pre>
 </div>
 
 </div>
