--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe4385cbbd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa01b6714d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4386302d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe4386304d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa01b977190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa01b977390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe438bd0b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe438bd0d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa01bf12a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa01bf12c50&gt;]</pre>
 </div>
 
 </div>
