--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f930e06ea10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8463d44410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f930e02f250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f930e02f450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8464045250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8464045450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f930e5c7b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f930e5c7d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f84645ddad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f84645ddcd0&gt;]</pre>
 </div>
 
 </div>
