--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f21346a79d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f77b638ca50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2134386290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2134386490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f77b635c210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f77b635c410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2134922c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2134922e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f77b690cad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f77b690ccd0&gt;]</pre>
 </div>
 
 </div>
