--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f587ddba0d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f05b66468d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f587e0bb1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f587e0bb3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f05b65fc1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f05b65fc3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f587e653b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f587e653d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f05b6baca10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f05b6bacc10&gt;]</pre>
 </div>
 
 </div>
