--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9269251110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff0e1560550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9269541850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9269542550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff0e185b290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff0e185b490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9269ad4190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9269ae4e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff0e1df4b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff0e1df4d90&gt;]</pre>
 </div>
 
 </div>
