--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0891793890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f88b8346990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0891a8d150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0891a8d350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f88b8625f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f88b861b190&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0892023a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0892023c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f88b8bde990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f88b8bdeb90&gt;]</pre>
 </div>
 
 </div>
