--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f70ec4a1490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8f2e9422d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f70ec79a210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f70ec79a410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8f2e2ed1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8f2e2ed3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f70ecd38b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f70ecd38d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8f2e88ba90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8f2e88bc90&gt;]</pre>
 </div>
 
 </div>
