--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb94429d1d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcae9fd9f10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb9442e4250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb9442e4450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcaea2f8310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcaea2f8510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb944882b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb944882d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcaea896b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcaea896d10&gt;]</pre>
 </div>
 
 </div>
