--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f063f9ed490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f77863762d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f063fcda210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f063fcda410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7786769e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f778679a090&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0640279a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0640279c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7786d36810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7786d36a10&gt;]</pre>
 </div>
 
 </div>
