--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff92f5fd790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f308db98f50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff92b24b1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff92b24b3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f308db4f310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f308db4f510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff92b7dfa50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff92b7dfc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f308e0ebc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f308e0ebe90&gt;]</pre>
 </div>
 
 </div>
