--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb525766fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2e51ae8150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb525425e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb525457050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e51a93450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2e51a93650&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5259ee890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5259eea90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e52043d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2e52043f50&gt;]</pre>
 </div>
 
 </div>
