--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f24a75b8b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f46e76eba90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f24a7b7b2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f24a7b7b4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f46e73d0150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f46e73d0390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f24a8128c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f24a8128e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f46e796ca50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f46e796cc90&gt;]</pre>
 </div>
 
 </div>
