--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f46e76eba90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f64b2931c50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f46e73d0150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f46e73d0390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f64b28f2250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f64b28f2450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f46e796ca50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f46e796cc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f64b2e88a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f64b2e88c90&gt;]</pre>
 </div>
 
 </div>
