--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3c9dd07350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f75c0b555d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c9d18c750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c9ce2dbd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f75c07c6d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f75c07c6f10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c9d42ce50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c9d3e55d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f75c0d72690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f75c0d72890&gt;]</pre>
 </div>
 
 </div>
