--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fab82a14b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f782baab8d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fab8270a850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fab8270aa50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f782b482b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f782b482d90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fab82caf250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fab82caf450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f782ba3d510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f782ba3d710&gt;]</pre>
 </div>
 
 </div>
