--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f140ac1df10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f22af4b9e90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f140a8fbb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f140a8fbd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f22af12bb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f22af12bd90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f140aeb9450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f140aeb9650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f22af6d6550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f22af6d6750&gt;]</pre>
 </div>
 
 </div>
