--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f59ccf2ad10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5a0db9b690&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f59ccb7ba90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f59ccb7bc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a0d520e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5a0d5280d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f59cd128410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f59cd128610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a0dad8850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5a0dad8a50&gt;]</pre>
 </div>
 
 </div>
