--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fee6c00a350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b3b7f87d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee6b9f1c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee6b9f1e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b3b470c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b3b196890&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee6bf9b5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee6bf9b790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b3ba1c590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b3ba1c7d0&gt;]</pre>
 </div>
 
 </div>
