--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f197f714fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6867868a50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f197e80ecd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f197e80eed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6867208ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6867208cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f197edbb610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f197edbb810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f68677c3410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f68677c3610&gt;]</pre>
 </div>
 
 </div>
