--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa175863390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fccdc44db90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa1749a3ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa1749a3d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fccdbe13b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fccdbe13d90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa174fa5e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa174f5e5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fccdc3bf4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fccdc3bf6d0&gt;]</pre>
 </div>
 
 </div>
