--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa3e7341150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f28624cb5d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa3e6d05c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa3e6d05e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2861e9ab90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2861e9add0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa3e72b2590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa3e72b2790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f28624464d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2862446710&gt;]</pre>
 </div>
 
 </div>
