--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff148e70950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f21e1c86b50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff14804fa50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff14804fc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f21e1943b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f21e1943d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1485fa550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff1485fa750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f21e1eff450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f21e1eff650&gt;]</pre>
 </div>
 
 </div>
