--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffaf7a22950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8061b52fd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffaf73e2bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffaf73e2dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8061521b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8061521d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffaf799c5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffaf799c7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8061acc490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8061acc690&gt;]</pre>
 </div>
 
 </div>
