--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbdffbba650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f40d6b27950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdff572b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbdff572d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f40d64fa9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f40d64fabd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdffb2d4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbdffb2d6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f40d6aa0450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f40d6aa0650&gt;]</pre>
 </div>
 
 </div>
