--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efe0c1fb990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2ce618d510&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efe0bc4ebd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efe0bc4edd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2ce56bcb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2ce56bcd10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efe0c4eb590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efe0c4eb790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2ce590f3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2ce590f5d0&gt;]</pre>
 </div>
 
 </div>
