--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbd5344fa50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0e5383ea50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbd52566c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbd52566e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e52d6fbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0e52d6fdd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbd52b104d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbd52b106d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e52fc2450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0e52fc2650&gt;]</pre>
 </div>
 
 </div>
