--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f72d611ee50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8710a5f210&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f72d616f9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f72d616fbd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8710a86b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8710a86cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f72d63d9310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f72d63d9510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8710cf0490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8710cf0650&gt;]</pre>
 </div>
 
 </div>
