--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2e122a5c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8d074e0650&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e128e9a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2e128e9c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d06941a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d06941c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e12b52350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2e12b52550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d06b81390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d06b81590&gt;]</pre>
 </div>
 
 </div>
