--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f696905cd90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa4edfe7450&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f696822d990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f696822db90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4ee060c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa4ee060e50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6968215fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f69687e2590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4ee2b4550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa4ee2b4750&gt;]</pre>
 </div>
 
 </div>
