--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa4edfe7450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f824fa6e910&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4ee060c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa4ee060e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f824f75aa90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f824f75acd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4ee2b4550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa4ee2b4750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f824f9c23d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f824f9c2610&gt;]</pre>
 </div>
 
 </div>
