--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff3e0628a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f20b997c990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3dfb44ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff3dfb44cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f20b99fba10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f20b99fbc10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3dfdac410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff3dfdac610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f20b9c4f390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f20b9c4f590&gt;]</pre>
 </div>
 
 </div>
