--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13185,7 +13185,7 @@ div#notebook {
       <th>0</th>
       <td>August 21, 2020</td>
       <td>Staff</td>
-      <td>August 21, 2020</td>
+      <td>August 4, 2020</td>
       <td>The staff member works in the Rich Building; a...</td>
     </tr>
     <tr>
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f20b997c990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f16a50f0190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f20b99fba10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f20b99fbc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f16a460ab50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f16a460ad50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f20b9c4f390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f20b9c4f590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f16a48bba50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f16a48726d0&gt;]</pre>
 </div>
 
 </div>
