--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbe13d638d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0e0b376410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe13a999d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbe13a99bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e0b41b910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0e0b41bb10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe140443d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbe140445d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e0b65b2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0e0b65b4d0&gt;]</pre>
 </div>
 
 </div>
